Reorganizes Error Response JSON type
